# nereo_ros2_code

./: .gitignore  .gitmodules  README.md  autostart.sh  autostart_v1_2.sh  connect_and_run.sh  gui_start.sh  log_autostart.txt  rosdep.yaml  start_cam.sh
SETUP_RPI/: README.md  setup_rpi.sh  stream_cam.sh  tmux.conf
autostart_scripts/: AUTOSTART.sh  autostart.sh  gui_start.sh  install_ros.sh  log_autostart.txt  micro_ros_connect.sh  start_imu_bar.sh
gui_ws/: run.sh
gui_ws/SocketStream/: client.py  server.py  server2.py  server3.py
gui_ws/src/gui_pkg/: package.xml  setup.py
gui_ws/src/gui_pkg/gui_pkg/: CameraUtils.py  Dialogs.py  GStreamerWidget.py  MainWindowUtils.py  PoliciesUtils.py  Services.py  gui_node.py  gui_ui.py  rov_sim_node.py  simple_publisher_imu_bar_node.py
gui_ws/src/gui_pkg/gui_pkg/qml/: main.qml
gui_ws/src/gui_pkg/gui_pkg/qml/components/: ControlPanelWindow.qml  ControllerTunerWindow.qml  HeaderBar.qml  Orientation2D.qml  SonarWindow.qml  SplashWindow.qml  VideoBox.qml
gui_ws/src/gui_pkg/gui_pkg/test/: cam_test.sh  check_controls.py
gui_ws/src/gui_pkg/launch/: workstation.launch.py
gui_ws/src/joystick_pkg/: package.xml  setup.py
gui_ws/src/joystick_pkg/joystick_pkg/: ControllerClass.py  joy_publisher.py  joy_to_cmdvel.py  rov_cmd_monitor.py
gui_ws/src/joystick_pkg/launch/: joystick.launch.py
gui_ws/src/web_pkg/: package.xml  setup.cfg  setup.py
joystick_pkg/src/joy_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/gui_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/nereo_pkg/: package.xml
rpi_video_stream/: server.py
rpi_video_stream/cpp_version/: build.sh  server  webcam_stream_server.cpp
scripts/controlstation/: start_gui
scripts/rpi/: install_services.sh  nereo-camera.service  nereo-micro-ros.service  nereo-sensors.service  nereo_ros_env.sh  nereo_sensors_start.sh  rpi_services.sh  start_rpi
(+29 files in other folders)
